--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>Click <a href="page2.html">here</a> to visit Page 2.</p>
         <!-- Add more paragraphs here if needed -->
     </div>
-
+mandeep Singh
 
 </body>
 
